backend/k8s/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fasttrack-api
spec:
  tls:
    - hosts:
        - fast.toper.dev
      secretName: fasttrack-api-tls
  rules:
    - host: fast.toper.dev
